# DimenTuna

./: .gitignore  README.md  pyproject.toml  test.ipynb
dimentuna/: __init__.py
dimentuna/Datasets/: __init__.py  dtdataset.py  dtmsgm.py  dtxnli.py
dimentuna/Mappers/: __init__.py  dtmappers.py
dimentuna/Models/: __init__.py  dtconfig.py  dtencoder.py  dtllm.py  lrdtllm.py  lwqwen.py
dimentuna/Projectors/: __init__.py  dtprojectors.py
dimentuna/Trainers/: __init__.py  dttrainer.py  dttrainstrat.py
dimentuna/Utils/: __init__.py  analywrapper.py  dtlayerwrapper.py
notebooks/: testing-github-install.ipynb
