[tool.poetry]
name = "dimentuna"
version = "0.1.0"
description = "LLMs Internal Space editing to support low-resource, under-represented languages."
authors = ["ImalshaD <plid475@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.1"
transformers = "^4.44.2"
tqdm = "^4.66.5"
datasets = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
